fixed dark mode onMount bug

--- a/src/styles/general/App.css
+++ b/src/styles/general/App.css
@@ -1,7 +1,4 @@
 :root{
-    /* --bg: #e5e5e5;
-    --txt: #47525e;
-    --blockbg: white; */
     --white: white;
 }
 
